# module/forums/adapter/http/register.go
@@ -26,11 +26,13 @@ func Register(router fiber.Router, services Services) {
 	forums.Post("", handler.createForum)
 	forums.Get("", handler.listForums)
 	forums.Get("/latest-posts", handler.listLatestPosts)
+	forums.Get("/search", handler.searchForums)
 	forums.Get("/unread-summary", handler.unreadSummary)
 	forums.Get("/:forum_id/threads", handler.listThreads)
 	forums.Post("/:forum_id/threads", handler.createThread)
 	forums.Get("/:forum_id/latest-posts", handler.listForumLatestPosts)
 	forums.Get("/:forum_id/posts/most-liked", handler.listMostLikedPosts)
+	forums.Get("/:forum_id/search", handler.searchForum)
 	forums.Get("/:forum_id", handler.getForum)
 	forums.Patch("/:forum_id", handler.updateForum)
 	forums.Delete("/:forum_id", handler.deleteForum)
